--- a/Master/index.html
+++ b/Master/index.html
@@ -16,6 +16,7 @@
 			
 			function playNeon(){
 				var buzz = document.getElementById('muskTrapHover');
+				buzz.voluem = 0.3;
 				buzz.play();
 			}
 			
@@ -26,7 +27,19 @@
 			}			
 		</script>		
 	</head>
-	<body>				
+	<body>		
+		<div>
+			<p class="p p-1"/>
+			<p class="p p-2"/>
+			<p class="p p-3"/>
+			<!--<p class="p p-4"/>
+			<p class="p p-5"/>
+			<p class="p p-6"/>
+			<p class="p p-7"/>
+			<p class="p p-8"/>
+			<p class="p p-9"/>
+			<p class="p p-10"/>-->
+		</div>
 		<div>
 			<audio id="backgroundAudio" loop>
 				<source src="Assets/Audio/80synth.wav" type="audio/wav"/>
